AWS/CloudFormation/stacks/elasticache.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Stack for ElastiCache",
  "Parameters": {
    "VPC": {
      "Description": "The VPC for the stack",
      "Type": "AWS::EC2::VPC"
    },
    "PrivateSubnetOne": {
      "Description": "Private Subnet #1",
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnetTwo": {
      "Description": "Private Subnet #2",
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnetOneCidr": {
      "Description": "The CIDR ranges of the private subnets",
      "Type": "String",
      "Default": "10.42.128.0/18"
    },
    "PrivateSubnetTwoCidr": {
      "Description": "The CIDR ranges of the private subnets",
      "Type": "String",
      "Default": "10.42.192.0/18"
    },
    "PrivateSubnetOneAZ": {
      "Description": "Private Subnet #1 AZ ",
      "Type": "String"
    },
    "PrivateSubnetTwoAZ": {
      "Description": "Private Subnet #2 AZ",
      "Type": "String"
    }
  },
  "Outputs": {
    "ElasticacheConnectString": {
       "Value": { "Fn::Join": [":",[
        { "Fn::GetAtt" : [ "DrupalElasticacheCluster", "ConfigurationEndpoint.Address" ] },
        { "Fn::GetAtt" : [ "DrupalElasticacheCluster", "ConfigurationEndpoint.Port" ] }
      ] ] }
    }
  },
  "Resources": {
    "DrupalElasticacheSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Elasticache Security Group",
        "VpcId": { "Ref" : "VPC" },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "11211",
            "ToPort": "11211",
            "SourceSecurityGroupName": {"Ref": "PrivateSubnetOneCidr"}
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "11211",
            "ToPort": "11211",
            "SourceSecurityGroupName": {"Ref": "PrivateSubnetTwoCidr"}
          }
        ]
      }
    },
    "DrupalElasticacheCluster": {
      "Type": "AWS::ElastiCache::CacheCluster",
      "Properties": {
        "AutoMinorVersionUpgrade": "true",
        "AZMode" : "cross-az",
        "Engine": "memcached",
        "CacheNodeType": "cache.t1.micro",
        "NumCacheNodes": "2",
        "VpcSecurityGroupIds": [{"Fn::GetAtt": [ "DrupalElasticacheSecurityGroup", "GroupId"]}],
        "PreferredAvailabilityZones" : [
          { "Ref": "PrivateSubnetOneAZ" },
          { "Ref": "PrivateSubnetTwoAZ" }
        ]
      }
    }
  }
}
