AWS/CloudFormation/stacks/rds.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Stack for RDS",
  "Parameters": {
    "DBInstanceType": {
      "Description": "RDS DB EC2 instance type",
      "Type": "String",
      "Default": "db.t2.small",
      "AllowedValues": ["db.t2.micro", "db.t2.small"],
      "ConstraintDescription": "must be a db.t2.micro or db.t2.small instance type"
    },
    "VPC": {
      "Description": "The VPC being used to create inside",
      "Type": "AWS::EC2::VPC"
    },
    "PrivateSubnetOne": {
      "Description": "Private Subnet #1",
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnetTwo": {
      "Description": "Private Subnet #2",
      "Type": "AWS::EC2::Subnet"
    },
    "PrivateSubnetOneCidrBlock": {
      "Description": "The CIDR block of the First Private Subnet",
      "Type": "String"
    },
    "PrivateSubnetTwoCidrBlock": {
      "Description": "The CIDR block of the Second Private Subnet",
      "Type": "String"
    },
    "DbMasterUsername": {
      "Description": "The Master username for the Drupal DB",
      "Type": "String",
      "Default": "drupal7"
    },
    "DbMasterPassword": {
      "Description": "The Master password for the Drupal DB",
      "Type": "String",
      "Default": "drupal7"
    }
  },
  "Outputs": {
    "DrupalDbConnectString": {
       "Value": { "Fn::Join": [":",[
        { "Fn::GetAtt" : [ "DrupalDb", "Endpoint.Address" ] },
        { "Fn::GetAtt" : [ "DrupalDb", "Endpoint.Port" ] }
      ] ] }
    },
    "DbMasterUsername": {
      "Value": { "Ref": "DbMasterUsername" }
    },
    "DbMasterPassword": {
      "Value": { "Ref": "DbMasterPassword" }
    }
  },

  "Resources": {
    "Drupal7DBSubnetGroup" : {
      "Type" : "AWS::RDS::DBSubnetGroup",
      "Properties" : {
        "DBSubnetGroupDescription" : "Subnets available for the Drupal 7 DB Instance",
        "SubnetIds" : [
          { "Ref": "PrivateSubnetOne" },
          { "Ref": "PrivateSubnetTwo" }
        ]
      }
    },
    "Drupal7DbSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for the Drupal 7 DB ",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "TCP",
            "FromPort": "3306",
            "ToPort": "3306",
            "CidrIp": { "Ref": "PrivateSubnetOneCidrBlock" }
          },
          {
            "IpProtocol": "TCP",
            "FromPort": "3306",
            "ToPort": "3306",
            "CidrIp": { "Ref": "PrivateSubnetTwoCidrBlock" }
          }
        ],
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Security Group for Drupal 7 RDS instances"
          }
        ]
      }
    },
    "DrupalDb" : {
      "Type" : "AWS::RDS::DBInstance",
      "Properties" : {
        "AllocatedStorage" : "10",
        "VPCSecurityGroups" : [
          {"Ref" : "Drupal7DbSecurityGroup"} ],
        "DBInstanceClass" : { "Ref": "DBInstanceType" },
        "StorageType": "gp2",
        "MultiAZ": true,
        "DBSubnetGroupName" : { "Ref" : "Drupal7DBSubnetGroup" },
        "DBInstanceIdentifier": "drupal7",
        "PreferredBackupWindow": "02:00-03:30",
        "BackupRetentionPeriod": "7",
        "PreferredMaintenanceWindow": "sun:04:00-sun:06:00",
        "MasterUsername" : { "Ref": "DbMasterUsername" },
        "MasterUserPassword" : { "Ref": "DbMasterPassword" },
        "Tags": [
          { "Key" : "Name", "Value" : "Drupal 7 Database" }
        ]
      },
      "DeletionPolicy" : "Snapshot"
    }
  }
}
