AWS/CloudFormation/stacks/vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Stack for VPC",
  "Parameters": {
    "VpcCidrBlock": {
      "Description": "The CIDR range of the VPC",
      "Type": "String",
      "Default": "10.42.0.0/16"
    },
    "PublicSubnetOneCidr": {
      "Description": "The CIDR ranges of the public subnets",
      "Type": "String",
      "Default": "10.42.0.0/18"
    },
    "PublicSubnetTwoCidr": {
      "Description": "The CIDR ranges of the public subnets",
      "Type": "String",
      "Default": "10.42.64.0/18"
    },
    "PrivateSubnetOneCidr": {
      "Description": "The CIDR ranges of the private subnets",
      "Type": "String",
      "Default": "10.42.128.0/18"
    },
    "PrivateSubnetTwoCidr": {
      "Description": "The CIDR ranges of the private subnets",
      "Type": "String",
      "Default": "10.42.192.0/18"
    }
  },
  "Outputs": {
    "VPC": {
      "Value": { "Ref": "VPC" }
    },
    "VpcCidrBlock": {
      "Value": { "Ref": "VpcCidrBlock" }
    },
    "PrivateSubnets": {
      "Value": { "Fn::Join": [ ",", [
        { "Ref": "PrivateSubnetOne" },
        { "Ref": "PrivateSubnetTwo" }
      ]]}
    },
    "PublicSubnets": {
      "Value": { "Fn::Join": [ ",", [
        { "Ref": "PublicSubnetOne" },
        { "Ref": "PublicSubnetTwo" }
      ]]}
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "CidrBlock": { "Ref": "VpcCidrBlock" },
        "Tags": [{
          "Key": "Name",
          "Value": "Drupal 7 stack VPC"
        }]
      }
    },
    "PublicSubnetOne": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "MapPublicIpOnLaunch": true,
        "CidrBlock": { "Ref": "PublicSubnetOneCidr" },
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Public Subnet #1"
        }]
      }
    },
    "PublicSubnetTwo": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "MapPublicIpOnLaunch": true,
        "CidrBlock": { "Ref": "PublicSubnetTwoCidr" },
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Public Subnet #2"
        }]
      }
    },
    "PrivateSubnetOne": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "MapPublicIpOnLaunch": false,
        "CidrBlock": { "Ref": "PrivateSubnetOneCidr" },
        "AvailabilityZone": {
          "Fn::Select": [ "0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Private Subnet #1"
        }]
      }
    },
    "PrivateSubnetTwo": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "MapPublicIpOnLaunch": false,
        "CidrBlock": { "Ref": "PrivateSubnetTwoCidr" },
        "AvailabilityZone": {
          "Fn::Select": [ "1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ]
        },
        "Tags": [{
          "Key": "Name",
          "Value": "Private Subnet #2"
        }]
      }
    },
    "PublicSubnetOneRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetOne" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },
    "PublicSubnetTwoRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnetTwo" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },
    "PrivateSubnetOneRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnetOne" },
        "RouteTableId": { "Ref": "PrivateRouteTableOne" }
      }
    },
    "PrivateSubnetTwoRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnetTwo" },
        "RouteTableId": { "Ref": "PrivateRouteTableTwo" }
      }
    },
    "PrivateRouteToInternetOne": {
      "DependsOn": [ "PrivateRouteTableOne", "NATGatewayOne" ],
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTableOne" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATGatewayOne" }
      }
    },
    "PrivateRouteToInternetTwo": {
      "DependsOn": [ "PrivateRouteTableTwo", "NATGatewayTwo" ],
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTableTwo" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATGatewayTwo" }
      }
    },
    "PrivateRouteTableOne": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": { "VpcId": { "Ref": "VPC" } }
    },
    "PrivateRouteTableTwo": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": { "VpcId": { "Ref": "VPC" } }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway"
    },
    "VPCGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": { "VpcId": { "Ref": "VPC" } }
    },
    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },
    "NATGatewayOne": {
      "DependsOn": "InternetGateway",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt": [ "ElasticIPOne", "AllocationId" ] },
        "SubnetId": { "Ref" : "PublicSubnetOne" }
      }
    },
    "ElasticIPOne": {
      "Type": "AWS::EC2::EIP",
      "Properties": { "Domain": "vpc" }
    },
    "NATGatewayTwo": {
      "DependsOn": "InternetGateway",
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt": [ "ElasticIPTwo", "AllocationId"] },
        "SubnetId": { "Ref" : "PublicSubnetTwo" }
      }
    },
    "ElasticIPTwo": {
      "Type": "AWS::EC2::EIP",
      "Properties": { "Domain": "vpc" }
    }
  }
}
